# Rust-Basics

./: README.md  basics.ipynb  functions.ipynb
.ipynb_checkpoints/: basics-checkpoint.ipynb
actual_programs/Datatypes/compound_datatypes/src/: main.rs
actual_programs/Datatypes/primitive_datatypes/: Cargo.toml
actual_programs/Datatypes/primitive_datatypes/src/: main.rs
actual_programs/block_expressions/src/: main.rs
actual_programs/fibonacci_series/src/: main.rs
actual_programs/functions/src/: main.rs
actual_programs/pointers/src/: main.rs
actual_programs/range_of_value/: Cargo.toml
actual_programs/range_of_value/src/: main.rs
actual_programs/strings/src/: main.rs
actual_programs/user_input/src/: main.rs
actual_programs/variables/src/: main.rs
functions/: Cargo.toml
hello_world/: README.md
hello_world/src/: main.rs
loops/: Cargo.toml
slides/: basics.md  basics_2.md
variable/: Cargo.toml  README.md
