[package]
name = "loops"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "if_else"
src = "src/bin/if_else.rs"

[[bin]]
name = "for_loop_1"
src = "src/bin/for_loop_1.rs"

[[bin]]
name = "for_loop_2"
src = "src/bin/for_loop_2.rs"

[[bin]]
name = "for_loop_3"
src = "src/bin/for_loop_3.rs"

[dependencies]
